# mesa-build-fix

./: LICENSE  LICENSE.mesa  README.md  meson.build  meson.options
src/android_stub/: meson.build
src/drivers/zink/: zink_bo.c
src/drm-shim/: drm_shim.c
src/freedreno/: meson.build
src/freedreno/drm/: freedreno_bo.c  freedreno_device.c  freedreno_drmif.h  freedreno_pipe.c  freedreno_priv.h  meson.build
src/freedreno/drm/kgsl/: kgsl_bo.c  kgsl_priv.h
src/freedreno/drm/virtio/: virtio_bo.c  virtio_device.c
src/freedreno/ir3/: ir3_compiler.c  ir3_disk_cache.c
src/gallium/: meson.build
src/gallium/auxiliary/target-helpers/: inline_sw_helper.h
src/gallium/drivers/freedreno/: freedreno_context.c  freedreno_screen.c  meson.build
src/gallium/drivers/panfrost/: pan_disk_cache.c
src/gallium/drivers/zink/: zink_screen.c
src/gallium/frontends/osmesa/: meson.build
src/gallium/targets/osmesa/: meson.build
src/mapi/glapi/: glapi.h
src/mesa/state_tracker/tests/: meson.build
src/panfrost/lib/: pan_props.c
src/util/: meson.build
src/util/blake3/: blake3_impl.h  meson.build
src/util/perf/: cpu_trace.h
src/virtio/vdrm/: vdrm_virtgpu.c
subprojects/llvm/: meson.build
